# Cryptocol

./: BreakingChanges.md  Cargo.toml  README.md
examples/: aes_basic_quick_examples.rs  aes_cbc_iso_examples.rs  aes_cbc_pkcs7_examples.rs  aes_cfb_examples.rs  aes_ctr_examples.rs  aes_ecb_iso_examples.rs  aes_ecb_pkcs7_examples.rs  aes_ofb_examples.rs  aes_pcbc_iso_examples.rs  aes_pcbc_pkcs7_examples.rs  big_cryptor64_basic_quick_examples.rs  big_cryptor64_ecb_pkcs7_examples.rs  big_cryptor64_examples.rs  bigcryptor128_basic_quick_examples.rs  bigcryptor128_cbc_iso_examples.rs  bigcryptor128_cbc_pkcs7_examples.rs  bigcryptor128_cfb_examples.rs  bigcryptor128_ctr_examples.rs  bigcryptor128_ecb_iso_examples.rs  bigcryptor128_ecb_pkcs7_examples.rs  bigcryptor128_ofb_examples.rs  bigcryptor128_pcbc_iso_examples.rs  bigcryptor128_pcbc_pkcs7_examples.rs  bigcryptor64_basic_quick_examples.rs  bigcryptor64_cbc_iso_examples.rs  bigcryptor64_cbc_pkcs7_examples.rs  bigcryptor64_cfb_examples.rs  bigcryptor64_ctr_examples.rs  bigcryptor64_ecb_iso_examples.rs  bigcryptor64_ecb_pkcs7_examples.rs  bigcryptor64_ofb_examples.rs  bigcryptor64_pcbc_iso_examples.rs  bigcryptor64_pcbc_pkcs7_examples.rs  biguint_arithmatic_examples.rs  biguint_arithmatic_uint_examples.rs  biguint_basic_quick_examples.rs  biguint_etc_examples.rs  biguint_examples.rs  biguint_exponentiation_examples.rs  biguint_exponentiation_uint.rs  (+43 more)
src/: lib.rs
src/asymmetric/: ecc_25519.rs  mod.rs  rsa.rs  trait_hash.rs  trait_oaep.rs  trait_oaep_impl_for_rsa.rs  trait_pkcs115.rs  trait_pkcs115_impl_for_rsa.rs  trait_pkcs1v15.rs  trait_pkcs1v15_impl_for_rsa.rs  trait_prng.rs
src/asymmetric/documentation/: mod.rs  rsa_basic.rs
src/concurrency/: concurrency.rs  mod.rs
src/hash/: keccak.rs  md4.rs  md5.rs  mod.rs  sha1.rs  sha2_256.rs  sha2_512.rs  sha2_512_t.rs
src/hash/documentation/: hash_md4.rs  hash_sha3.rs  mod.rs
src/number/: big_uint.rs  int_union.rs  long_union.rs  longer_union.rs  macros_for_integer_unions.rs  macros_for_types.rs  mod.rs  short_union.rs  size_union.rs  small_uint.rs  trait_big_int_more.rs  trait_big_int_more_impl.rs  trait_big_uint_modular.rs  trait_big_uint_modular_impl.rs  trait_big_uint_more.rs  trait_big_uint_more_impl.rs  trait_big_uint_panic_free.rs  trait_big_uint_panic_free_impl.rs  trait_big_uint_prime.rs  trait_big_uint_prime_impl.rs  trait_expanded.rs  trait_expanded_for_biguint_impl.rs  trait_small_uint_for_integer_unions_impl.rs  trait_small_uint_for_unsigned_impl.rs  traits_for_big_uint_impl.rs
src/number/documentation/: big_uint_arithmetic.rs  big_uint_arithmetic_uint.rs  big_uint_basic_operation.rs  big_uint_binary_impl.rs  big_uint_display_impl.rs  big_uint_lowerexp_impl.rs  big_uint_lowerhex_impl.rs  big_uint_modular.rs  big_uint_more.rs  big_uint_octal_impl.rs  big_uint_other_calculation.rs  big_uint_other_calculation_uint.rs  (+9 more)
src/random/: any_number_engine_c_generic.rs  cprng_engine_generic.rs  mod.rs  random.rs  random_specific.rs  trait_impl_for_any_number.rs  trait_impl_for_des.rs  trait_impl_for_md4.rs  trait_impl_for_md5.rs  trait_impl_for_sha1.rs  trait_impl_for_sha2_256.rs  trait_impl_for_sha2_512.rs  trait_impl_for_sha3.rs  trait_key.rs  trait_key_impl_for_big_cryptor128.rs  trait_key_impl_for_big_cryptor64.rs  trait_key_impl_for_des.rs  trait_key_impl_for_rijndael.rs  trait_prng_engine.rs  trait_prng_engine_impl_for_big_cryptor128.rs  trait_prng_engine_impl_for_big_cryptor64.rs  trait_prng_engine_impl_for_cprng_engine.rs  trait_prng_engine_impl_for_des.rs  trait_prng_engine_impl_for_md4.rs  trait_prng_engine_impl_for_md5.rs  trait_prng_engine_impl_for_rijndael.rs  trait_prng_engine_impl_for_sha1.rs  trait_prng_engine_impl_for_sha2_256.rs  trait_prng_engine_impl_for_sha2_512.rs  trait_prng_engine_impl_for_sha3.rs  trait_random_engine.rs  trait_random_engine_impl_for_any_number.rs  trait_random_engine_impl_for_big_cryptor128.rs  trait_random_engine_impl_for_big_cryptor64.rs  trait_random_engine_impl_for_des.rs  trait_random_engine_impl_for_md4.rs  trait_random_engine_impl_for_md5.rs  trait_random_engine_impl_for_rijndael.rs  trait_random_engine_impl_for_sha1.rs  trait_random_engine_impl_for_sha2_256.rs  (+2 more)
src/symmetric/: big_cryptor.rs  big_cryptor128.rs  big_cryptor64.rs  des.rs  mod.rs  ndes.rs  operation_mode_macros.rs  rijndael.rs  small_des.rs  trait_cbc_with_padding_iso.rs  trait_cbc_with_padding_iso_impl_for_big_cryptor128.rs  trait_cbc_with_padding_iso_impl_for_big_cryptor64.rs  trait_cbc_with_padding_iso_impl_for_bigcryptor128.rs  trait_cbc_with_padding_iso_impl_for_bigcryptor64.rs  trait_cbc_with_padding_iso_impl_for_des.rs  trait_cbc_with_padding_iso_impl_for_rijndael.rs  trait_cbc_with_padding_pkcs7.rs  trait_cbc_with_padding_pkcs7_impl_for_big_cryptor128.rs  trait_cbc_with_padding_pkcs7_impl_for_big_cryptor64.rs  trait_cbc_with_padding_pkcs7_impl_for_bigcryptor64.rs  trait_cbc_with_padding_pkcs7_impl_for_des.rs  trait_cbc_with_padding_pkcs7_impl_for_rijndael.rs  trait_cfb.rs  trait_cfb_impl_for_big_cryptor128.rs  trait_cfb_impl_for_big_cryptor64.rs  trait_cfb_impl_for_des.rs  trait_cfb_impl_for_rijndael.rs  trait_ctr.rs  trait_ctr_impl_for_big_cryptor128.rs  trait_ctr_impl_for_big_cryptor64.rs  trait_ctr_impl_for_des.rs  trait_ctr_impl_for_rijndael.rs  trait_ecb_with_padding_iso.rs  trait_ecb_with_padding_iso_impl_for_big_cryptor128.rs  trait_ecb_with_padding_iso_impl_for_big_cryptor64.rs  trait_ecb_with_padding_iso_impl_for_bigcryptor128.rs  trait_ecb_with_padding_iso_impl_for_bigcryptor64.rs  trait_ecb_with_padding_iso_impl_for_des.rs  trait_ecb_with_padding_iso_impl_for_rijndael.rs  trait_ecb_with_padding_pkcs7.rs  (+74 more)
(+50 files in other folders)
